<?xml version="1.0"?>
<package format="3">
  <name>apf_controller</name>
  <version>0.0.0</version>
  <description>Artificial Potential Fields controller for obstacle avoidance</description>

  <maintainer email="julia@email.com">julia</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
